# Eng-to-IPA-server

./: .env.example  .gitignore  config.py  external_fallback.py  main.py  phonetic_rules.py  pyproject.toml  requirements.txt  test_api.http  transcription_service.py  transcription_service_modular.py  update_weak_forms.py
app/: config.py  database_service.py  main.py  transcription_service.py  transformers.py
scripts/: download_kaikki.sh
